--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,12 @@
 [metadata]
 name = stl_obj_convertor
-version = 0.1.0
+version = 0.1.1
 author = Shivam Kadukar
+author_email = shivamk2802@gmail.com
 author_contact = https://www.linkedin.com/in/shivam-kadukar-58b9b5180/
 description = For converting .stl files to .obj and .obj files to .stl
 long_description = file: README.md
+url = https://github.com/shivamkadukar
 long_description_content_type = text/markdown
 classifiers = 
     Development Status :: 4 - Beta 
@@ -34,6 +36,3 @@ classifiers =
 packages = find:
 python_requires = >= 3.9.0
 include_package_data = True
-
-
-
